# darling-Heimdal

./: .gitignore  CMakeLists.txt  README.md  files.txt  list.txt
darling/include/CommonAuth/: CommonAuth.h  com_right.h  der-protos.h  heim-auth.h  heim_threads.h  heimcred-const.h  heimcred.h  heimntlm-protos.h  heimntlm.h  heimscram-protos.h  heimscram.h  hex.h  hx509-protos.h  krb5cf-protos.h  ntlm_err.h  parse_time.h  parse_units.h  scram.h  store-int.h  wind_err.h
darling/include/GSS/: GSS.h  GSSItem.h  GSSPrivate.h  base64.h  com_right.h  config-apple.h  config.h  getarg.h  gssapi.h  gssapi_apple.h  gssapi_krb5.h  gssapi_mech.h  gssapi_netlogon.h  gssapi_ntlm.h  gssapi_oid.h  gssapi_plugin.h  gssapi_private.h  gssapi_protos.h  gssapi_rewrite.h  gssapi_scram.h  gssapi_spi.h  gssapi_spnego.h  heim-ipc.h  heim_asn1.h  heimbase.h  hx509.h  kcm.h  krb5-private.h  krb5_ccapi.h  parse_bytes.h  roken.h  spnego_asn1.h  wind.h
darling/include/Heimdal/: GSS.h  GSSPrivate.h  HeimdalSystemConfiguration.h  asn1-common.h  asn1_err.h  cms_asn1.h  com_err.h  config_plugin.h  crypto-headers.h  der.h  gkrb5_err.h  gssapi.h  gssapi_apple.h  gssapi_krb5.h  gssapi_netlogon.h  gssapi_ntlm.h  gssapi_oid.h  gssapi_private.h  gssapi_protos.h  gssapi_scram.h  gssapi_spi.h  gssapi_spnego.h  hdb-protos.h  hdb.h  hdb_asn1.h  hdb_err.h  heim_err.h  heimbase.h  heimbase_impl.h  heimbasepriv.h  heimcred-const.h  hx509-private.h  hx509.h  hx509_err.h  k524_err.h  krb5-protos.h  krb5-types.h  krb5.h  krb5_asn1.h  krb5_err.h  (+10 more)
darling/notes/: UPDATE_SOURCE.md
darling/script/: CMakeLists.txt  build_heimdal_compilers.sh  build_heimdal_frameworks.sh
darling/script/HeimdalCompilers/: CMakeLists.txt
darling/script/HeimdalCompilers/heimdal-asn1_compile/: asn1_compiler-yacc.sh  build.sh
darling/script/HeimdalCompilers/heimdal-compile_et/: build.sh  compile_et-yacc.sh
darling/script/HeimdalCompilers/heimdal-slc/: build.sh  slc-yacc.sh
darling/script/HeimdalFrameworks/: asn1-generate-template.sh  build-export-data.sh  gen-error-tables.sh  gssapi-rewrite-headers.sh  hx509-yacc.sh  krb5-rewrite-headers.sh  slc-generated-files.sh
darling/script/heimdal-asn1_compile/: build.sh
darling/script/heimdal-compile_et/: build.sh
darling/script/heimdal-slc/: build.sh  slc-yacc.sh
include-framework/CommonAuth/: CommonAuth.h  base64.h  heim-auth.h  heim_asn1.h  heimntlm-protos.h  heimntlm.h  heimscram-protos.h  heimscram.h  hex.h  krb5.h  ntlm_err.h  parse_time.h  scram.h  store-int.h
include-framework/GSS/: GSS.h  GSSPrivate.h  com_err.h  com_right.h  config-apple.h  config.h  crypto-headers.h  der-protos.h  getarg.h  gssapi.h  gssapi_apple.h  gssapi_krb5.h  gssapi_mech.h  gssapi_netlogon.h  gssapi_ntlm.h  gssapi_oid.h  gssapi_plugin.h  gssapi_private.h  gssapi_protos.h  gssapi_rewrite.h  gssapi_scram.h  gssapi_spi.h  gssapi_spnego.h  heim_threads.h  heimbase.h  heimbase_impl.h  heimcred-const.h  hx509.h  kcm.h  krb5-private.h  krb5-protos.h  krb5cf-protos.h  parse_bytes.h  roken-common.h  roken.h  spnego_asn1.h  wind.h
include-framework/Heimdal/: GSS.h  GSSItem.h  GSSPrivate.h  HeimdalSystemConfiguration.h  asn1-common.h  asn1_err.h  cms_asn1.h  config_plugin.h  der.h  gkrb5_err.h  gssapi.h  gssapi_apple.h  gssapi_krb5.h  gssapi_netlogon.h  gssapi_ntlm.h  gssapi_oid.h  gssapi_private.h  gssapi_protos.h  gssapi_scram.h  gssapi_spi.h  gssapi_spnego.h  hdb-protos.h  hdb.h  hdb_asn1.h  hdb_err.h  heim-ipc.h  heim_err.h  heimbasepriv.h  heimcred.h  hx509-private.h  hx509-protos.h  hx509_err.h  k524_err.h  krb5-types.h  krb5_asn1.h  krb5_ccapi.h  krb5_err.h  krb_err.h  locate_plugin.h  parse_units.h  (+5 more)
lib/gssapi/: CMakeLists.txt
lib/gssapi/cf/: item.c
lib/gssapi/krb5/: init_sec_context.c
lib/hx509/: ks_keychain.c
lib/krb5/: changepw.c  crypto-pk.c  get_cred.c  init_creds_pw.c  krbhst.c  pfs.c  send_to_kdc.c
